2003-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-groups-should-use-list-page):
	Abolish.
	(shimbun-asahi-content-start, shimbun-asahi-content-end): Follow
	the change of the web site.
	(shimbun-asahi-index-url): New function.
	(shimbun-index-url): Use it.
	(shimbun-asahi-get-headers-in-the-list-page): Abolish.
	(shimbun-asahi-get-headers): Rename from
	`shimbun-asahi-get-headers-in-the-top-page'.
	(shimbun-get-headers): Use it.

2003-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-shimbun-servers-file): Exclude fml,
	glimpse, lump, mailarc, mailman, mhonarc and text; indent.
	(w3mhack-generate-colon-keywords-file): indent.

2003-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Add www.alltheweb.com
	suggested by Chris Beggy <chrisb@kippona.com>; make the default
	value more suitable to the language environment; don't use the old
	fashioned backquotes.
	(w3m-search-default-engine): Always default to google.
	(w3m-search-prefer-japanese-site): Remove.
	(w3m-search-inhibited-japanese-engines): Remove.
	(w3m-search): Bind `completion-ignore-case' to t.
	(w3m-search-quick-search-handler): Remove
	`w3m-search-prefer-japanese-site' and
	`w3m-search-inhibited-japanese-engines'.

2003-02-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-attributes): Allow imperfect Status-Line like no
	Reason-Phrase. Guard broken header like no location field.

2003-02-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-util.el (w3m-url-local-p): Use `\`' instead of `^'.

2003-02-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-local-dirlist-cgi):  Treat a `local cookie file', again.

2003-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-insert-image): Use `map-extents' instead of
	`extent-at' repeatedly.
	(w3m-remove-image): Ditto.

2003-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-submit): Remove `!CURRENT_URL!' from
	action tag.
